[MIG] project_tag_security: Migration to 18.0
TT55551

--- a/project_tag_security/static/description/index.html
+++ b/project_tag_security/static/description/index.html
@@ -387,6 +387,7 @@ ul.auto-toc {
 <div class="section" id="usage">
 <h1><a class="toc-backref" href="#toc-entry-1">Usage</a></h1>
 <ol class="arabic simple">
+<li>Go to Project &gt; Configuration &gt; Tags.</li>
 <li>Create or edit a project tag and set any allowed project.</li>
 <li>Go to the allowed project(s) and set the previous tag.</li>
 <li>Go to another project (not allowed) and you will not be able to set
