[FIX] project_timesheet_time_control: hide show_time_control In odoo 17+ tree/list view now uses column_invisible instead of invisible to hide the entire column.
TT55789

--- a/project_timesheet_time_control/static/description/index.html
+++ b/project_timesheet_time_control/static/description/index.html
@@ -496,6 +496,7 @@ If you spotted it first, help us to smash it by providing a detailed and welcome
 <li>Ernesto Tejeda</li>
 <li>Jairo Llopis</li>
 <li>Carlos Roca</li>
+<li>David Bañón</li>
 </ul>
 </blockquote>
 </li>
